--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h3 {
 .testimonials { 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 20px;
+    gap: 30px;
     grid-template-rows: 1fr 1fr;
 }
 
@@ -48,8 +48,10 @@ h3 {
     font-weight: thin;
     letter-spacing: 1.2px;
     line-height: 1.5;
-    padding: 2.5em;
+    padding: 2.5em 2.5em 1em;
     border-radius: 2%;
+    box-shadow: 46px 19px 58px -26px rgba(0,0,0,0.3);
+
 }
 
 .testimony-clifford {
