--- a/style.css
+++ b/style.css
@@ -19,8 +19,11 @@ img {
     margin-top: -20px;
 }
 
-h3 {
+h1 {
     margin-top: 0;
+    letter-spacing: .9;
+    font-size: 3.7rem;
+    font-weight: thin;
 }
 
 .profile-picture, .profile-name {
@@ -41,7 +44,7 @@ h3 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 30px;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto auto;
 }
 
 .testimony {
