--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ html {
 body {
     font-family: "Barlow Semi Condensed";
     font-weight: 500 600;
-    /* margin: 0 auto; */
 }
 
 img {
@@ -40,31 +39,22 @@ h1 {
 .profile-name--modify {
     max-width: 110px;
 }
-
-.testimonials { 
-    margin: 0 auto;
-    width: 90%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 30px;
-    grid-template-rows: auto auto;
-}
-
 .testimony {
+    margin: 1.5em 1.5em 1em;
+    padding: 1.5em 2.5em 1em;
     font-weight: thin;
     letter-spacing: 1.2px;
     line-height: 1.5;
-    padding: 2.5em 2.5em 1em;
+    height: auto;
     border-radius: 2%;
     box-shadow: 46px 19px 58px -26px rgba(0,0,0,0.3);
+    overflow: hidden;
 
 }
 
 .testimony-clifford {
     background-color: hsl(263, 55%, 52%);
     color: hsl(0, 0%, 89%);
-    grid-column: span 2;
-    height: auto;
 }
 
 .testimony-walters {
@@ -75,7 +65,6 @@ h1 {
 .testimony-whittle {
     background-color: hsl(214, 17%, 98%);
     color: black;
-    grid-row: span 2;
 }
 
 .testimony-harmon {
@@ -86,7 +75,31 @@ h1 {
 .testimony-abrams {
     background-color: black;
     color: hsl(0, 0%, 86%);
-    grid-column: span 2;
 }
+
+@media screen and (min-width: 1024px) {
+    
+    .testimonials { 
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 450px 450px;
+    
+    
+    .testimony-clifford {
+        grid-column: span 2;
+        height: auto;
+    }
+
+    .testimony-whittle {
+        grid-row: span 2;
+    }
+
+    .testimony-abrams {
+        grid-column: span 2;
+    }
+}
+    
+
 
 
